--- a/src/Reflectinator/FuncFactory.tt
+++ b/src/Reflectinator/FuncFactory.tt
@@ -15,7 +15,7 @@ namespace Reflectinator
     public static partial class FuncFactory
     {
 <#
-for (int i = 0; i < 17; i++)
+for (int i = 0; i < MaxNumberOfFuncGenericArguments; i++)
 {
 #>
         public static Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TReturnType> CreateConstructorFunc<TReturnType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>(ConstructorInfo ctor = null)
