--- a/src/Reflectinator/Constructor`n.tt
+++ b/src/Reflectinator/Constructor`n.tt
@@ -23,20 +23,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments; i++)
 #>
     public sealed class Constructor<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>> : Constructor
     {
-<#
-    if (i == 0)
-    {
-#>
-        private static readonly Type[] _argTypes = new Type[0];
-<#
-    }
-    else
-    {
-#>
-        private static readonly Type[] _argTypes = { <# PrintJoinFormat(", ", "typeof(TArg{1})", i, false, false); #> };
-<#
-    }
-#>
+        private static readonly Type[] _argTypes = new Type[] {<# PrintJoinFormat(", ", "typeof(TArg{1})", i, false, false, 1); #>};
 
         private readonly Lazy<Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TDeclaringType>> _invoke;
 
@@ -45,7 +32,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments; i++)
         {
         }
 
-        private Constructor(ConstructorInfo constructorInfo)
+        internal Constructor(ConstructorInfo constructorInfo)
             : base(constructorInfo)
         {
             _invoke = new Lazy<Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TDeclaringType>>(() => FuncFactory.CreateConstructorFunc<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>(constructorInfo));
