--- a/src/Reflectinator/ActionMethod`n.tt
+++ b/src/Reflectinator/ActionMethod`n.tt
@@ -13,6 +13,7 @@
 ////////////////////////////////////////////////////////////////////////////////
 
 using System;
+using System.Collections.Concurrent;
 using System.Reflection;
 
 namespace Reflectinator
@@ -23,21 +24,21 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments - 1; i++)
 #>
     public class ActionMethod<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>> : Method, IActionMethod
     {
-        private readonly Action<object, object[]> _invokeLoose;
-        private readonly Action<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>> _invoke;
+        private readonly Lazy<Action<object, object[]>> _invokeLoose;
+        private readonly Lazy<Action<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>> _invoke;
     
         internal ActionMethod(MethodInfo methodInfo)
             : base(methodInfo)
         {
-            _invokeLoose = (instance, args) => methodInfo.Invoke(instance, args); // TODO: get from FuncFactory
-            _invoke = (instance<# PrintJoinFormat(", ", "arg{1}", i, true, false); #>) => methodInfo.Invoke(instance, new object[] {<# PrintJoinFormat(", ", "arg{1}", i, false, false, 1); #>}); // TODO: get from FuncFactory
+            _invokeLoose = new Lazy<Action<object, object[]>>(() => FuncFactory.CreateInstanceMethodAction(methodInfo));
+            _invoke = new Lazy<Action<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>>(() => FuncFactory.CreateInstanceMethodAction<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>(methodInfo));
         }
     
-        void IActionMethod.Invoke(object instance, params object[] args) { _invokeLoose(instance, args); }
-        Action<object, object[]> IActionMethod.InvokeDelegate { get { return _invokeLoose; } }
+        void IActionMethod.Invoke(object instance, params object[] args) { _invokeLoose.Value(instance, args); }
+        Action<object, object[]> IActionMethod.InvokeDelegate { get { return _invokeLoose.Value; } }
     
-        public void Invoke(TDeclaringType instance<# PrintJoinFormat(", ", "TArg{1} arg{1}", i, true, false); #>) { _invoke(instance<# PrintJoinFormat(", ", "arg{1}", i, true, false); #>); }
-        public Action<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>> InvokeDelegate { get { return _invoke; } }
+        public void Invoke(TDeclaringType instance<# PrintJoinFormat(", ", "TArg{1} arg{1}", i, true, false); #>) { _invoke.Value(instance<# PrintJoinFormat(", ", "arg{1}", i, true, false); #>); }
+        public Action<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>> InvokeDelegate { get { return _invoke.Value; } }
     }
 
 <#
