--- a/src/Reflectinator/StaticFuncMethod`n.tt
+++ b/src/Reflectinator/StaticFuncMethod`n.tt
@@ -23,20 +23,20 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments - 1; i++)
 #>
     public sealed class StaticFuncMethod<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>, TReturnType> : Method, IStaticFuncMethod
     {
-        private readonly Func<object[], object> _invokeLoose;
+        private readonly Lazy<Func<object[], object>> _invokeLoose;
         private readonly Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TReturnType> _invoke;
         
         internal StaticFuncMethod(MethodInfo methodInfo)
             : base(methodInfo)
         {
-            _invokeLoose = args => methodInfo.Invoke(null, args); // TODO: get from FuncFactory
+            _invokeLoose = new Lazy<Func<object[], object>>(() => FuncFactory.CreateStaticMethodFunc(methodInfo));
             _invoke = (<# PrintJoinFormat(", ", "arg{1}", i, false, false); #>) => (TReturnType)methodInfo.Invoke(null, new object[] {<# PrintJoinFormat(", ", "arg{1}", i, false, false, 1); #>}); // TODO: get from FuncFactory
         }
         
         public override bool IsStatic { get { return true; } }
         
-        object IStaticFuncMethod.Invoke(params object[] args) { return _invokeLoose(args); }
-        Func<object[], object> IStaticFuncMethod.InvokeDelegate { get { return _invokeLoose; } }
+        object IStaticFuncMethod.Invoke(params object[] args) { return _invokeLoose.Value(args); }
+        Func<object[], object> IStaticFuncMethod.InvokeDelegate { get { return _invokeLoose.Value; } }
         
         public TReturnType Invoke(<# PrintJoinFormat(", ", "TArg{1} arg{1}", i, false, false); #>) { return _invoke(<# PrintJoinFormat(", ", "arg{1}", i, false, false); #>); }
         public Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TReturnType> InvokeDelegate { get { return _invoke; } }
