--- a/src/Reflectinator/FuncFactory.tt
+++ b/src/Reflectinator/FuncFactory.tt
@@ -135,10 +135,10 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments; i++)
         #region CreateStaticMethodAction
 
 <#
-for (int i = 1; i < MaxNumberOfFuncGenericArguments; i++)
+for (int i = 0; i < MaxNumberOfFuncGenericArguments; i++)
 {
 #>
-        public static Action<<# PrintJoinFormat(", ", "TArg{1}", i, false, false); #>> CreateStaticMethodAction<<# PrintJoinFormat(", ", "TArg{1}", i, false, false); #>>(MethodInfo methodInfo)
+        public static Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #> CreateStaticMethodAction<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>(MethodInfo methodInfo)
         {
             if (!methodInfo.IsStatic)
             {
@@ -150,7 +150,7 @@ for (int i = 1; i < MaxNumberOfFuncGenericArguments; i++)
             var parameters = new ParameterExpression[] {<# PrintJoinFormat(", ", "Expression.Parameter(typeof(TArg{1}), \"arg{1}\")", i, false, false, 1); #>};
             var call = GetCallExpression(methodInfo, null, null, null, methodInfoParameters, parameters);
 
-            var expression = Expression.Lambda<Action<<# PrintJoinFormat(", ", "TArg{1}", i, false, false); #>>>(call, parameters);
+            var expression = Expression.Lambda<Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>>(call, parameters);
             return expression.Compile();
         }
 
