--- a/src/Reflectinator/StaticActionMethod`n.tt
+++ b/src/Reflectinator/StaticActionMethod`n.tt
@@ -24,13 +24,13 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments - 1; i++)
     public sealed class StaticActionMethod<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>> : ActionMethod<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>, IStaticActionMethod
     {
         private readonly Lazy<Action<object[]>> _invokeLoose;
-        private readonly Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #> _invoke;
+        private readonly Lazy<Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>> _invoke;
         
         internal StaticActionMethod(MethodInfo methodInfo)
             : base(methodInfo)
         {
-            _invokeLoose = new Lazy<Action<object[]>>(() => FuncFactory.CreateStaticMethodAction(methodInfo));
-            _invoke = (<# PrintJoinFormat(", ", "arg{1}", i, false, false); #>) => methodInfo.Invoke(null, new object[] {<# PrintJoinFormat(", ", "arg{1}", i, false, false, 1); #>}); // TODO: get from FuncFactory
+            _invokeLoose = new Lazy<Action<object[]>>(() => FuncFactory.CreateNonGenericStaticMethodAction(methodInfo));
+            _invoke = new Lazy<Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>>(() => FuncFactory.CreateStaticMethodAction<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>(methodInfo));
         }
         
         public override bool IsStatic { get { return true; } }
@@ -38,8 +38,8 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments - 1; i++)
         void IStaticActionMethod.Invoke(params object[] args) { _invokeLoose.Value(args); }
         Action<object[]> IStaticActionMethod.InvokeDelegate { get { return _invokeLoose.Value; } }
         
-        public void Invoke(<# PrintJoinFormat(", ", "TArg{1} arg{1}", i, false, false); #>) { _invoke(<# PrintJoinFormat(", ", "arg{1}", i, false, false); #>); }
-        public new Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #> InvokeDelegate { get { return _invoke; } }
+        public void Invoke(<# PrintJoinFormat(", ", "TArg{1} arg{1}", i, false, false); #>) { _invoke.Value(<# PrintJoinFormat(", ", "arg{1}", i, false, false); #>); }
+        public new Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #> InvokeDelegate { get { return _invoke.Value; } }
     }
 
 <#
