--- a/src/Reflectinator/FuncMethod`n.tt
+++ b/src/Reflectinator/FuncMethod`n.tt
@@ -31,7 +31,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments - 1; i++)
         }
     
         public TReturnType Invoke(TDeclaringType instance<# PrintJoinFormat(", ", "TArg{1} arg{1}", i, true, false); #>) { return _invoke.Value(instance<# PrintJoinFormat(", ", "arg{1}", i, true, false); #>); }
-        Func<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>, TReturnType> InvokeDelegate { get { return _invoke.Value; } }
+        public Func<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>, TReturnType> InvokeDelegate { get { return _invoke.Value; } }
     }
 
 <#
