--- a/src/Reflectinator/StaticActionMethod`n.tt
+++ b/src/Reflectinator/StaticActionMethod`n.tt
@@ -37,6 +37,9 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments - 1; i++)
         
         void IStaticActionMethod.Invoke(params object[] args) { _invokeLoose.Value(args); }
         Action<object[]> IStaticActionMethod.InvokeDelegate { get { return _invokeLoose.Value; } }
+
+        object IStaticMethod.Invoke(params object[] args) { _invokeLoose.Value(args); return null; }
+        Func<object[], object> IStaticMethod.InvokeDelegate { get { return ((IStaticMethod)this).Invoke; } }
         
         public void Invoke(<# PrintJoinFormat(", ", "TArg{1} arg{1}", i, false, false); #>) { _invoke.Value(<# PrintJoinFormat(", ", "arg{1}", i, false, false); #>); }
         public new Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #> InvokeDelegate { get { return _invoke.Value; } }
