--- a/src/Reflectinator/ActionMethod`n.tt
+++ b/src/Reflectinator/ActionMethod`n.tt
@@ -30,8 +30,8 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments - 1; i++)
         internal ActionMethod(MethodInfo methodInfo)
             : base(methodInfo)
         {
-            _invokeLoose = new Lazy<Action<object, object[]>>(() => FuncFactory.CreateNonGenericInstanceMethodAction(methodInfo));
-            _invoke = new Lazy<Action<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>>(() => FuncFactory.CreateInstanceMethodAction<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>(methodInfo));
+            _invokeLoose = new Lazy<Action<object, object[]>>(() => ExpressionFactory.CreateNonGenericInstanceMethodAction(methodInfo));
+            _invoke = new Lazy<Action<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>>(() => ExpressionFactory.CreateInstanceMethodAction<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>(methodInfo));
         }
     
         void IActionMethod.Invoke(object instance, params object[] args) { _invokeLoose.Value(instance, args); }
