--- a/src/Reflectinator/Constructor`n.tt
+++ b/src/Reflectinator/Constructor`n.tt
@@ -35,7 +35,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments; i++)
         internal Constructor(ConstructorInfo constructorInfo)
             : base(constructorInfo)
         {
-            _invoke = new Lazy<Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TDeclaringType>>(() => FuncFactory.CreateConstructorFunc<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>(constructorInfo));
+            _invoke = new Lazy<Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TDeclaringType>>(() => ExpressionFactory.CreateConstructorFunc<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>(constructorInfo));
         }
 
         public TDeclaringType Invoke(<# PrintJoinFormat(", ", "TArg{1} arg{1}", i, false, false); #>)
