--- a/src/Reflectinator/ExpressionFactory.tt
+++ b/src/Reflectinator/ExpressionFactory.tt
@@ -12,7 +12,7 @@ using System.Reflection;
 
 namespace Reflectinator
 {
-    public static partial class FuncFactory
+    public static partial class ExpressionFactory
     {
         #region CreateConstructorFunc
 
