--- a/src/Reflectinator/Method.tt
+++ b/src/Reflectinator/Method.tt
@@ -30,7 +30,7 @@ namespace Reflectinator
             : base(methodInfo)
         {
             _methodInfo = methodInfo;
-            _invokeLoose = new Lazy<Func<object, object[], object>>(() => FuncFactory.CreateNonGenericInstanceMethodFunc(methodInfo));
+            _invokeLoose = new Lazy<Func<object, object[], object>>(() => ExpressionFactory.CreateNonGenericInstanceMethodFunc(methodInfo));
         }
 
         #region Factory Methods
