--- a/src/Reflectinator/StaticActionMethod`n.tt
+++ b/src/Reflectinator/StaticActionMethod`n.tt
@@ -29,8 +29,8 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments - 1; i++)
         internal StaticActionMethod(MethodInfo methodInfo)
             : base(methodInfo)
         {
-            _invokeLoose = new Lazy<Action<object[]>>(() => FuncFactory.CreateNonGenericStaticMethodAction(methodInfo));
-            _invoke = new Lazy<Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>>(() => FuncFactory.CreateStaticMethodAction<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>(methodInfo));
+            _invokeLoose = new Lazy<Action<object[]>>(() => ExpressionFactory.CreateNonGenericStaticMethodAction(methodInfo));
+            _invoke = new Lazy<Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>>(() => ExpressionFactory.CreateStaticMethodAction<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>(methodInfo));
         }
         
         public override bool IsStatic { get { return true; } }
