--- a/src/Reflectinator/StaticFuncMethod`n.tt
+++ b/src/Reflectinator/StaticFuncMethod`n.tt
@@ -29,8 +29,8 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments - 1; i++)
         internal StaticFuncMethod(MethodInfo methodInfo)
             : base(methodInfo)
         {
-            _invokeLoose = new Lazy<Func<object[], object>>(() => FuncFactory.CreateNonGenericStaticMethodFunc(methodInfo));
-            _invoke = new Lazy<Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TReturnType>>(() => FuncFactory.CreateStaticMethodFunc<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TReturnType>(methodInfo));
+            _invokeLoose = new Lazy<Func<object[], object>>(() => ExpressionFactory.CreateNonGenericStaticMethodFunc(methodInfo));
+            _invoke = new Lazy<Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TReturnType>>(() => ExpressionFactory.CreateStaticMethodFunc<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TReturnType>(methodInfo));
         }
         
         public override bool IsStatic { get { return true; } }
