--- a/src/Reflectinator/Constructor`n.tt
+++ b/src/Reflectinator/Constructor`n.tt
@@ -13,6 +13,7 @@
 
 using System;
 using System.Dynamic;
+using System.Linq.Expressions;
 using System.Reflection;
 
 namespace Reflectinator
@@ -25,6 +26,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments; i++)
     {
         private static readonly Type[] _argTypes = new Type[] {<# PrintJoinFormat(", ", "typeof(TArg{1})", i, false, false, 1); #>};
 
+        private readonly Lazy<Expression<Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TDeclaringType>>> _invokeExpression;
         private readonly Lazy<Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TDeclaringType>> _invoke;
 
         internal Constructor()
@@ -35,14 +37,12 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments; i++)
         internal Constructor(ConstructorInfo constructorInfo)
             : base(constructorInfo)
         {
-            _invoke = new Lazy<Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TDeclaringType>>(() => ExpressionFactory.CreateConstructorFunc<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>(constructorInfo));
+            _invokeExpression = new Lazy<Expression<Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TDeclaringType>>>(() => ExpressionFactory.CreateConstructorFuncExpression<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>(constructorInfo));
+            _invoke = new Lazy<Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TDeclaringType>>(() => _invokeExpression.Value.Compile());
         }
 
-        public TDeclaringType Invoke(<# PrintJoinFormat(", ", "TArg{1} arg{1}", i, false, false); #>)
-        {
-            return _invoke.Value(<# PrintJoinFormat(", ", "arg{1}", i, false, false); #>);
-        }
-
+        public TDeclaringType Invoke(<# PrintJoinFormat(", ", "TArg{1} arg{1}", i, false, false); #>) { return _invoke.Value(<# PrintJoinFormat(", ", "arg{1}", i, false, false); #>); }
+        public Expression<Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TDeclaringType>> InvokeExpression { get { return _invokeExpression.Value; } }
         public Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TDeclaringType> InvokeFunc { get { return _invoke.Value; } }
     }
 
