--- a/src/Reflectinator/ExpressionFactory.tt
+++ b/src/Reflectinator/ExpressionFactory.tt
@@ -63,7 +63,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments; i++)
 for (int i = 0; i < MaxNumberOfFuncGenericArguments - 1; i++)
 {
 #>
-        public static Func<TInstanceType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>, TReturnType> CreateInstanceMethodFunc<TInstanceType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>, TReturnType>(MethodInfo methodInfo)
+        public static Expression<Func<TInstanceType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>, TReturnType>> CreateInstanceMethodFuncExpression<TInstanceType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>, TReturnType>(MethodInfo methodInfo)
         {
             var methodInfoParameters = GetMethodInfoParameters(methodInfo<# PrintJoinFormat(", ", "typeof(TArg{1})", i, true, false); #>);
 
@@ -73,7 +73,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments - 1; i++)
             var call = GetCallExpression(methodInfo, instanceParameter, typeof(TInstanceType), typeof(TReturnType), methodInfoParameters, parameters);
 
             var expression = Expression.Lambda<Func<TInstanceType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>, TReturnType>>(call, instanceParameter.Then(parameters));
-            return expression.Compile();
+            return expression;
         }
 
 <#
@@ -87,7 +87,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments - 1; i++)
 for (int i = 0; i < MaxNumberOfFuncGenericArguments - 1; i++)
 {
 #>
-        public static Action<TInstanceType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>> CreateInstanceMethodAction<TInstanceType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>(MethodInfo methodInfo)
+        public static Expression<Action<TInstanceType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>> CreateInstanceMethodActionExpression<TInstanceType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>(MethodInfo methodInfo)
         {
             var methodInfoParameters = GetMethodInfoParameters(methodInfo<# PrintJoinFormat(", ", "typeof(TArg{1})", i, true, false); #>);
 
@@ -97,7 +97,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments - 1; i++)
             var call = GetCallExpression(methodInfo, instanceParameter, typeof(TInstanceType), null, methodInfoParameters, parameters);
 
             var expression = Expression.Lambda<Action<TInstanceType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>>(call, instanceParameter.Then(parameters));
-            return expression.Compile();
+            return expression;
         }
 
 <#
@@ -111,7 +111,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments - 1; i++)
 for (int i = 0; i < MaxNumberOfFuncGenericArguments; i++)
 {
 #>
-        public static Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TReturnType> CreateStaticMethodFunc<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TReturnType>(MethodInfo methodInfo)
+        public static Expression<Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TReturnType>> CreateStaticMethodFuncExpression<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TReturnType>(MethodInfo methodInfo)
         {
             if (!methodInfo.IsStatic)
             {
@@ -124,7 +124,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments; i++)
             var call = GetCallExpression(methodInfo, null, null, typeof(TReturnType), methodInfoParameters, parameters);
 
             var expression = Expression.Lambda<Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TReturnType>>(call, parameters);
-            return expression.Compile();
+            return expression;
         }
 
 <#
@@ -138,7 +138,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments; i++)
 for (int i = 0; i < MaxNumberOfFuncGenericArguments; i++)
 {
 #>
-        public static Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #> CreateStaticMethodAction<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>(MethodInfo methodInfo)
+        public static Expression<Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>> CreateStaticMethodActionExpression<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>(MethodInfo methodInfo)
         {
             if (!methodInfo.IsStatic)
             {
@@ -151,7 +151,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments; i++)
             var call = GetCallExpression(methodInfo, null, null, null, methodInfoParameters, parameters);
 
             var expression = Expression.Lambda<Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>>(call, parameters);
-            return expression.Compile();
+            return expression;
         }
 
 <#
