--- a/src/Reflectinator/StaticActionMethod`n.tt
+++ b/src/Reflectinator/StaticActionMethod`n.tt
@@ -13,6 +13,7 @@
 ////////////////////////////////////////////////////////////////////////////////
 
 using System;
+using System.Linq.Expressions;
 using System.Reflection;
 
 namespace Reflectinator
@@ -23,22 +24,30 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments - 1; i++)
 #>
     public sealed class StaticActionMethod<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>> : ActionMethod<TDeclaringType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>, IStaticActionMethod
     {
+        private readonly Lazy<Expression<Action<object[]>>> _invokeLooseExpression;
         private readonly Lazy<Action<object[]>> _invokeLoose;
+        
+        private readonly Lazy<Expression<Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>>> _invokeExpression;
         private readonly Lazy<Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>> _invoke;
         
         internal StaticActionMethod(MethodInfo methodInfo)
             : base(methodInfo)
         {
-            _invokeLoose = new Lazy<Action<object[]>>(() => ExpressionFactory.CreateNonGenericStaticMethodAction(methodInfo));
-            _invoke = new Lazy<Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>>(() => ExpressionFactory.CreateStaticMethodAction<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>(methodInfo));
+            _invokeLooseExpression = new Lazy<Expression<Action<object[]>>>(() => ExpressionFactory.CreateNonGenericStaticMethodActionExpression(methodInfo));
+            _invokeLoose = new Lazy<Action<object[]>>(() => _invokeLooseExpression.Value.Compile());
+
+            _invokeExpression = new Lazy<Expression<Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>>>(() => ExpressionFactory.CreateStaticMethodActionExpression<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>(methodInfo));
+            _invoke = new Lazy<Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>>(() => _invokeExpression.Value.Compile());
         }
         
         public override bool IsStatic { get { return true; } }
         
         void IStaticActionMethod.Invoke(params object[] args) { _invokeLoose.Value(args); }
+        Expression<Action<object[]>> IStaticActionMethod.InvokeExpression { get { return _invokeLooseExpression.Value; } }
         Action<object[]> IStaticActionMethod.InvokeDelegate { get { return _invokeLoose.Value; } }
 
         object IStaticMethod.Invoke(params object[] args) { _invokeLoose.Value(args); return null; }
+        Expression<Func<object[], object>> IStaticMethod.InvokeExpression { get { throw new NotImplementedException("TODO: Implement"); } }
         Func<object[], object> IStaticMethod.InvokeDelegate { get { return ((IStaticMethod)this).Invoke; } }
         
         public void Invoke(<# PrintJoinFormat(", ", "TArg{1} arg{1}", i, false, false); #>) { _invoke.Value(<# PrintJoinFormat(", ", "arg{1}", i, false, false); #>); }
