ExpressionFactory names its lambdas; promote name property to IMember.

--- a/src/Reflectinator/Constructor.tt
+++ b/src/Reflectinator/Constructor.tt
@@ -93,6 +93,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments; i++)
 
         public ConstructorInfo ConstructorInfo { get { return _constructorInfo; } }
         
+        public override string Name { get { return "ctor"; } }
         public override bool IsPublic { get { return _constructorInfo.IsPublic; } }
         public override bool IsStatic { get { return false; } }
 
