--- a/src/Reflectinator/Method.tt
+++ b/src/Reflectinator/Method.tt
@@ -146,7 +146,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments - 1; i++)
         #endregion
 
         public MethodInfo MethodInfo { get { return _methodInfo; } }
-        public string Name { get { return _methodInfo.Name; } }
+        public override string Name { get { return _methodInfo.Name; } }
 
         public override bool IsPublic { get { return _methodInfo.IsPublic; } }
         public override bool IsStatic { get { return false; } }
