--- a/src/Reflectinator/ExpressionFactory.tt
+++ b/src/Reflectinator/ExpressionFactory.tt
@@ -48,7 +48,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments; i++)
             var newExpression = Expression.New(ctor, coercedParameters);
             var newCast = newExpression.Coerce(ctor.DeclaringType, typeof(TReturnType));
 
-            var expression = Expression.Lambda<Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TReturnType>>(newCast, parameters);
+            var expression = Expression.Lambda<Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TReturnType>>(newCast, string.Format("{0}.ctor", ctor.DeclaringType.Name), parameters);
             return expression;
         }
 
@@ -72,7 +72,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments - 1; i++)
             var parameters = new ParameterExpression[] {<# PrintJoinFormat(", ", "Expression.Parameter(typeof(TArg{1}), \"arg{1}\")", i, false, false, 1); #>};
             var call = GetCallExpression(methodInfo, instanceParameter, typeof(TInstanceType), typeof(TReturnType), methodInfoParameters, parameters);
 
-            var expression = Expression.Lambda<Func<TInstanceType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>, TReturnType>>(call, instanceParameter.Then(parameters));
+            var expression = Expression.Lambda<Func<TInstanceType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>, TReturnType>>(call, string.Format("{0}.{1}", methodInfo.DeclaringType.Name, methodInfo.Name), instanceParameter.Then(parameters));
             return expression;
         }
 
@@ -96,7 +96,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments - 1; i++)
             var parameters = new ParameterExpression[] {<# PrintJoinFormat(", ", "Expression.Parameter(typeof(TArg{1}), \"arg{1}\")", i, false, false, 1); #>};
             var call = GetCallExpression(methodInfo, instanceParameter, typeof(TInstanceType), null, methodInfoParameters, parameters);
 
-            var expression = Expression.Lambda<Action<TInstanceType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>>(call, instanceParameter.Then(parameters));
+            var expression = Expression.Lambda<Action<TInstanceType<# PrintJoinFormat(", ", "TArg{1}", i, true, false); #>>>(call, string.Format("{0}.{1}", methodInfo.DeclaringType.Name, methodInfo.Name), instanceParameter.Then(parameters));
             return expression;
         }
 
@@ -123,7 +123,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments; i++)
             var parameters = new ParameterExpression[] {<# PrintJoinFormat(", ", "Expression.Parameter(typeof(TArg{1}), \"arg{1}\")", i, false, false, 1); #>};
             var call = GetCallExpression(methodInfo, null, null, typeof(TReturnType), methodInfoParameters, parameters);
 
-            var expression = Expression.Lambda<Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TReturnType>>(call, parameters);
+            var expression = Expression.Lambda<Func<<# PrintJoinFormat(", ", "TArg{1}", i, false, true); #>TReturnType>>(call, string.Format("{0}.{1}", methodInfo.DeclaringType.Name, methodInfo.Name), parameters);
             return expression;
         }
 
@@ -150,7 +150,7 @@ for (int i = 0; i < MaxNumberOfFuncGenericArguments; i++)
             var parameters = new ParameterExpression[] {<# PrintJoinFormat(", ", "Expression.Parameter(typeof(TArg{1}), \"arg{1}\")", i, false, false, 1); #>};
             var call = GetCallExpression(methodInfo, null, null, null, methodInfoParameters, parameters);
 
-            var expression = Expression.Lambda<Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>>(call, parameters);
+            var expression = Expression.Lambda<Action<#= i > 0 ? "<" : "" #><# PrintJoinFormat(", ", "TArg{1}", i, false, false); #><#= i > 0 ? ">" : "" #>>(call, string.Format("{0}.{1}", methodInfo.DeclaringType.Name, methodInfo.Name), parameters);
             return expression;
         }
 
